This commit will
make everything look nice on the app,
fix my fanouts so that they store the correct values

--- a/elements/crew-team-manager-app/crew-team-manager-app.html
+++ b/elements/crew-team-manager-app/crew-team-manager-app.html
@@ -109,10 +109,13 @@
             }
 
             _dataChanged(dataSplices) {
-                if (dataSplices.indexSplices[0].object[8]) {
-                    let data = dataSplices.indexSplices[0].object[8];
-                    this._teamId = data.$val;
 
+                if (dataSplices) {
+                    if (dataSplices.indexSplices[0].object[8]) {
+                        let data = dataSplices.indexSplices[0].object[8];
+                        this._teamId = data.$val;
+
+                    }
                 }
             }
 
