--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-list-message.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-list-message.html
@@ -22,7 +22,7 @@
             }
         </style>
         <div id="layout">
-            <div id="message">No Athletes Found</div>
+            <div id="message">No Regattas Found</div>
         </div>
     </template>
 
