This commit will
change the app color for most of the entities detail page
start adding interaction between a boat and athletes/riggers oars

--- a/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
@@ -54,7 +54,7 @@
             }
 
             #toolbar {
-                background-color: #2e7d32;
+                background-color: #164410;
                 color: #fff;
             }
         </style>
