--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list.html
@@ -15,12 +15,12 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-roster-list-loading.html">
-<link rel="import" href="crew-team-manager-roster-list-results.html">
-<link rel="import" href="crew-team-manager-roster-list-message.html">
+<link rel="import" href="../crew-team-manager-roster/crew-team-manager-roster-list-loading.html">
+<link rel="import" href="../crew-team-manager-roster/crew-team-manager-roster-list-results.html">
+<link rel="import" href="../crew-team-manager-roster/crew-team-manager-roster-list-message.html">
 
 
-<dom-module id="crew-team-manager-roster-list">
+<dom-module id="crew-team-manager-fleet-roster-list">
     <template>
         <style>
              :host {
@@ -70,13 +70,13 @@
         <firebase-query app-name="laborsync-ctm" id="query" path="teamAthletes/{{teamId}}" data="{{_data}}">
         </firebase-query>
 
-        <app-header-layout id="layout" has-scrolling-region fullbleed>
+        <app-header-layout id="layout">
 
-            <app-header slot="header" reveals>
+            <app-header reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="menu" icon="menu" on-click="_handleActionMenu"></paper-icon-button>
-                    <div main-title id="title">Roster</div>
-                    <paper-icon-button id="logout" icon="exit-to-app" on-click="_handleActionLogout"></paper-icon-button>
+                    <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
+                    <div main-title id="title">Select Athletes To Add</div>
+                    <paper-icon-button id="add" icon="check" on-click="_handleActionAdd"></paper-icon-button>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
@@ -84,9 +84,6 @@
                 <crew-team-manager-roster-list-results id="results" data="[[_data]]"></crew-team-manager-roster-list-results>
                 <crew-team-manager-roster-list-message id="message"></crew-team-manager-roster-list-message>
             </iron-pages>
-
-            <paper-fab id="fab" icon="add" on-click="_handleActionCreate"></paper-fab>
-
         </app-header-layout>
 
 
@@ -94,10 +91,10 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerRosterList extends Polymer.Element {
+        class crewTeamManagerFleetRosterList extends Polymer.Element {
 
             static get is() {
-                return 'crew-team-manager-roster-list'
+                return 'crew-team-manager-fleet-roster-list'
             }
 
             static get observers() {
@@ -123,29 +120,13 @@
                 }
             }
 
-            _handleActionMenu() {
-                this.dispatchEvent(new CustomEvent(crewTeamManagerRosterList.is + '-action-menu', {
-                    bubbles: true,
-                    composed: true
-                }));
-            }
-
-            _handleActionLogout() {
-                this.dispatchEvent(new CustomEvent(crewTeamManagerStage.is + '-action-logout', {
-                    bubbles: true,
-                    composed: true
-                }));
-            }
-
-            _handleActionCreate() {
-                this.dispatchEvent(new CustomEvent(crewTeamManagerRosterList.is + '-action-create', {
-                    bubbles: true,
-                    composed: true
-                }));
+            _handleActionAdd() {
+                console.log('add athletes to the boat')
             }
 
             _updatePage(dataSplices) {
 
+                console.log(dataSplices);
                 let page = 'message';
 
                 if (dataSplices) {
@@ -161,6 +142,6 @@
         }
 
         // Register custom element definition using standard platform API
-        customElements.define(crewTeamManagerRosterList.is, crewTeamManagerRosterList);
+        customElements.define(crewTeamManagerFleetRosterList.is, crewTeamManagerFleetRosterList);
     </script>
 </dom-module>
