--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
@@ -28,10 +28,6 @@
                 @apply(--paper-font-common-base);
             }
 
-             :host([menu-hidden]) #menu {
-                display: none;
-            }
-
             #pages {
                 @apply(--layout-vertical);
                 @apply(--layout-flex);
@@ -54,7 +50,7 @@
             }
 
             #toolbar {
-                background-color: #2e7d32;
+                background-color: #164410;
                 color: #fff;
             }
         </style>
