--- a/elements/crew-team-manager-roster/crew-team-manager-roster-detail.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-detail.html
@@ -54,7 +54,7 @@
             }
 
             #toolbar {
-                background-color: #2e7d32;
+                background-color: #164410;
                 color: #fff;
             }
         </style>
