--- a/elements/crew-team-manager-team/crew-team-manager-team-detail-results.html
+++ b/elements/crew-team-manager-team/crew-team-manager-team-detail-results.html
@@ -59,6 +59,10 @@
                 border-bottom: solid 1px grey;
                 padding: 16px;
             }
+
+            #image {
+                @apply(--layout-flex);
+            }
         </style>
 
         <div id="content">
