--- a/elements/crew-team-manager-team/crew-team-manager-team-detail.html
+++ b/elements/crew-team-manager-team/crew-team-manager-team-detail.html
@@ -54,7 +54,7 @@
             }
 
             #toolbar {
-                background-color: #2e7d32;
+                background-color: #164410;
                 color: #fff;
             }
         </style>
@@ -66,10 +66,10 @@
 
             <app-header reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
-                    <div main-title id="title">Details</div>
+                    <paper-icon-button id="menu" icon="menu" on-click="_handleActionMenu"></paper-icon-button>
+                    <div main-title id="title">Team: [[_data.teamName]]</div>
                     <paper-icon-button id="edit" icon="create" on-click="_handleActionEdit"></paper-icon-button>
-                    <paper-icon-button id="delete" icon="delete" on-click="_handleActionDelete"></paper-icon-button>
+                    <paper-icon-button id="logout" icon="exit-to-app" on-click="_handleActionLogout"></paper-icon-button>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
@@ -130,10 +130,15 @@
                 this._page = page;
             }
 
+            _handleActionLogout() {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerStage.is + '-action-logout', {
+                    bubbles: true,
+                    composed: true
+                }));
+            }
 
-
-            _handleActionBack(e) {
-                this.dispatchEvent(new CustomEvent(crewTeamManagerTeamDetail.is + '-action-back', {
+            _handleActionMenu() {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerTeamDetail.is + '-action-menu', {
                     bubbles: true,
                     composed: true
                 }));
