--- a/elements/crew-team-manager-team/crew-team-manager-team.html
+++ b/elements/crew-team-manager-team/crew-team-manager-team.html
@@ -10,11 +10,10 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" group="list" href="crew-team-manager-team-list.html">
+<link rel="import" href="crew-team-manager-team-detail.html">
 
 <dom-module id="crew-team-manager-team">
 
-    <link rel="lazy-import" group="detail" href="crew-team-manager-team-detail.html">
     <link rel="lazy-import" group="edit" href="crew-team-manager-team-edit.html">
     <template>
         <style>
@@ -26,10 +25,6 @@
             #pages {
                 @apply(--layout-flex);
                 position: relative;
-            }
-
-            #list {
-                @apply(--layout-fit);
             }
 
             #detail {
@@ -47,14 +42,11 @@
         </style>
 
         <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
-            <crew-team-manager-team-list id="list" menu-hidden$="[[wideLayout]]" teamId="[[teamId]]" on-crew-team-manager-team-list-results-action-detail="_handleActionDetail">
-            </crew-team-manager-team-list>
 
-            <crew-team-manager-team-detail id="detail" team="[[_team]]" on-crew-team-manager-team-detail-action-back="_handleActionBack"
-                on-crew-team-manager-team-detail-action-edit="_handleActionEdit" on-crew-team-manager-team-detail-action-delete="_handleActionDelete">
+            <crew-team-manager-team-detail menu-hidden$="[[wideLayout]]" id="detail" team="[[teamId]]" on-crew-team-manager-team-detail-action-edit="_handleActionEdit">
             </crew-team-manager-team-detail>
 
-            <crew-team-manager-team-edit edit="[[_edit]]" id="edit" team="[[_team]]" on-crew-team-manager-team-edit-action-back="_handleActionBackOnce"
+            <crew-team-manager-team-edit edit="[[_edit]]" id="edit" team="[[teamId]]" on-crew-team-manager-team-edit-action-back="_handleActionBackOnce"
                 on-crew-team-manager-team-edit-action-saved="_handleActionSaved">
             </crew-team-manager-team-edit>
         </iron-pages>
@@ -75,7 +67,7 @@
                 return {
                     _page: {
                         type: String,
-                        value: 'list'
+                        value: 'detail'
                     },
 
                     _edit: {
@@ -97,23 +89,6 @@
 
                     teamId: String
                 }
-            }
-
-            _handleActionDetail(e) {
-                this._team = e.detail.team;
-                this.importLazyGroup('detail').then(function (results) {
-                    this._page = 'detail';
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
-                }.bind(this));
-            }
-
-            _handleActionBack(e) {
-                this.importLazyGroup('list').then(function (results) {
-                    this._page = 'list';
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
-                }.bind(this));
             }
 
             _handleActionBackOnce(e) {
@@ -142,17 +117,6 @@
                     this.dispatchEvent(new CustomEvent('import-loaded', results));
                 }.bind(this));
                 this._toast = 'Team Saved';
-                this.$.toast.fitInto = this.$.pages;
-                this.$.toast.open();
-            }
-
-            _handleActionDelete(e) {
-                this.importLazyGroup('list').then(function (results) {
-                    this._page = 'list';
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
-                }.bind(this));
-                this._toast = 'Team Deleted';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
             }
